<resources>
    <string name="app_name">FitFeast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workouts">Workouts</string>
    <string name="recipes">Recipes</string>
    <string name="search">Search</string>
    <string name="all_workout">All Workouts</string>
    <string name="by_body_parts">By Body Parts</string>
    <string name="by_equipment">By Equipments</string>
    <string name="by_target">By Target Muscle</string>
    <string name="exercise_image">Exercise Image</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="body_part">Body Part</string>
    <string name="equipment">Equipment</string>
    <string name="target_muscle">Target Muscle</string>
    <string name="retry">Retry</string>
    <string name="something_went_wrong_try_again">Something went wrong, try again</string>
    <string name="something_went_wrong_try_again_later">Something went wrong, try again later</string>
    <string name="workout_detail">WorkOut Detail</string>
    <string name="back_button">Back Button</string>
    <string name="expand_button">Expand Button</string>
    <string name="instructions">Instructions</string>
</resources>