<?xml version="1.0" encoding="utf-8"?>

    <com.google.android.material.card.MaterialCardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cardView"
        style="@style/Widget.Material3.CardView.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="0dp"
            android:paddingBottom="8dp"

            >

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/exerciseImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_125sdp"
                android:contentDescription="@string/exercise_image"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/exerciseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingTop="8dp"
                android:text="@string/exercise_name"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bodyPart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingTop="4dp"
                android:text="@string/body_part"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/equipment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingTop="4dp"
                android:text="@string/equipment"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/targetMuscle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingTop="4dp"
                android:text="@string/target_muscle"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
