<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.screens.WorkOutDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layout_marginHorizontal="14dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                style="@style/Widget.Material3.Button.IconButton"
                android:id="@+id/backButton"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="14dp"
                android:src="@drawable/back"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/back_button"
                app:tint="?attr/colorSurfaceInverse" />

            <com.google.android.material.textview.MaterialTextView
                style="@android:style/TextAppearance.Material.Widget.ActionBar.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/workout_detail"
                android:textSize="@dimen/_16ssp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/backButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/backButton"
                app:layout_constraintTop_toTopOf="@+id/backButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

            <ImageView
                android:id="@+id/gifImageView"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="1" />

        </com.google.android.material.card.MaterialCardView>



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingTop="16dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bodyPartTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingTop="8dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/equipmentTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/bodyPartTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingTop="8dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/targetTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/equipmentTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingTop="8dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/secondaryMuscleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/targetTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingTop="8dp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/showInstructionsCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            app:layout_constraintTop_toBottomOf="@+id/secondaryMuscleText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:animateLayoutChanges="true"
                android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="end"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/showInstructionsTextView"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    style="@style/TextAppearance.Material3.ActionBar.Subtitle"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/instructions"/>

                <ImageButton
                    style="@style/Widget.Material3.Button.IconButton"
                    android:id="@+id/expandInstructionsButton"
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:layout_weight="0"
                    android:layout_marginEnd="14dp"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/arrow_down"
                    android:contentDescription="@string/expand_button"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:tint="?attr/colorSurfaceInverse" />
            </LinearLayout>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:id="@+id/instructionsTextView"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    android:paddingTop="8dp"
/>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>