<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport= "true"
    tools:context=".presentation.screens.WorkOutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_Start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="2dp"
            app:layout_constraintGuide_begin="12dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_End"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="2dp"
            app:layout_constraintGuide_end="12dp" />



        <com.google.android.material.card.MaterialCardView
            android:id="@+id/all_workout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_165sdp"
            android:layout_marginTop="14dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_End"
            app:layout_constraintStart_toStartOf="@+id/guideline_Start"
            app:layout_constraintTop_toBottomOf="@+id/search_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image_view"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:src="@drawable/human_workout"
                    android:tint="?attr/colorOnSurface"
                    app:layout_constraintBottom_toTopOf="@+id/text_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:padding="5dp"
                    android:text="@string/all_workout"
                    android:textAlignment="center"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/workout_by_parts"
            android:layout_width="0dp"
            android:layout_height="@dimen/_165sdp"
            android:layout_marginTop="14dp"
            app:cardCornerRadius="10dp"
            android:layout_marginEnd="6dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toStartOf="@+id/workout_by_equipment"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/guideline_Start"
            app:layout_constraintTop_toBottomOf="@+id/all_workout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image_view2"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:src="@drawable/human_body_parts"
                    android:tint="?attr/colorOnSurface"
                    app:layout_constraintBottom_toTopOf="@+id/text_view2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:padding="5dp"
                    android:text="@string/by_body_parts"
                    android:textAlignment="center"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/workout_by_equipment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            android:layout_marginStart="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/workout_by_parts"
            app:layout_constraintEnd_toEndOf="@id/guideline_End"
            app:layout_constraintEnd_toStartOf="@+id/guideline_End"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/workout_by_parts"
            app:layout_constraintTop_toTopOf="@+id/workout_by_parts">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="@+id/workout_by_parts"
                app:layout_constraintStart_toEndOf="@+id/constraintLayout2">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image_view3"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:src="@drawable/pilates"
                    android:tint="?attr/colorOnSurface"
                    app:layout_constraintBottom_toTopOf="@+id/text_view3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:padding="5dp"
                    android:text="@string/by_equipment"
                    android:textAlignment="center"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.search.SearchBar
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/search"
            android:textAppearance="@android:style/TextAppearance.Material.SearchResult.Subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.search.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/search"
            app:layout_anchor="@id/search_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_RecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.search.SearchView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>